<resources>
    <string name="app_name">SprintProject</string>

    <string name="welcome_text">Create an Account</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="textview_label">Logistics</string>

    <string-array name="rooms_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="room_type_options">
        <item>King Suite</item>
        <item>Queen Suite</item>
    </string-array>

</resources>