<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".views.AccountCreation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <!-- Username Label -->
        <TextView
            android:id="@+id/register_usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            tools:ignore="MissingConstraints" />

        <!-- Username EditText -->
        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints" />

        <!-- Password Label -->
        <TextView
            android:id="@+id/register_passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password_label"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints" />

        <!-- Register Button -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/darker_gray"
            tools:ignore="MissingConstraints" />

        <!--Login button-->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Exit"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
